--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.32.8"
+  },
+  "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.3"
   }
 }
